* Textboxes in the replace bar use as much width as they can.
* Change event is fired when a substitution changes text in an input or textarea element (issue 49).
* Updated icon sizes.

v0.14.0 (16-1-2013)
* Removed compatibility with the substitution list in the 0.10 format.
* Substitution groups now have names. This implies a new list format: 0.14.
* Changed shortcuts because Shift+F2 is used for the developer toolbar in Firefox 16 (issue 87).
* Exclusion URLs can be used without normal URLs, so you can apply substitutions to all URLs except a few ones (issue 92).
* Replace bar again appears just below the find bar, without any other bar in between.
* New option to allow inline scripts to be replaced (issue 17).
* Updated help file to clarify some concepts about regular expressions (issue 85).
* Substitution groups can be enabled or disabled (issue 33).
* Text replaced in all body elements (issue 62).
* Pretty printing of exported JSON file (issue 96).
* HTML substitutions are made on the html node instead of the body (issues 64 and 76).
* Column settings on the options dialog are persistent (issue 103).
* Compatibility with Firefox up to 21.0a1.

v0.13.3 (18-8-2012)
* Changed behaviour of "whole words" feature. Now it supports all Unicode letters thanks to XRegExp and distinguishes between word characters, non-word
  characters, and spaces or separators. This solves issue 36.

v0.13.2 (18-7-2012)
* Fixed bug of auto-replace not working in OS X (issue 80).
* Compatibility with Firefox up to 17.0a1.

v0.13.1 (5-7-2012)
* Fixed bug in loading input type from JSON (a.k.a. "undefined" error) (issue 70).
* Fixed bug in importing from XML when there was more than one URL (issue 71).

v0.13.0 (1-7-2012)
* Subscription works from local files (URL file://...) (issue 25).
* Updated RegExp link in help file (issue 28).
* Added new XPaths to select text nodes (issues 35, 53).
* Fixed bug causing double substitution in title (issue 63).