@@ -1,5 +1,5 @@
 pref("extensions.fox@replace.fx.description", "chrome://foxreplace/locale/foxreplace.properties");
-pref("extensions.foxreplace.substitutionListJSON", '{"version":"0.14","groups":[]}');
+pref("extensions.foxreplace.substitutionListJSON", '{"version":"0.15","groups":[]}');
 pref("extensions.foxreplace.autoReplaceOnLoad", false);
 pref("extensions.foxreplace.replaceUrls", false);
 pref("extensions.foxreplace.replaceScripts", false);
