@@ -1,3 +1,6 @@
 <!ENTITY text "Text">
 <!ENTITY wholeWords "Paraules senceres">
 <!ENTITY regExp "Expressió regular">
+<!ENTITY htmlNone "No">
+<!ENTITY htmlOutput "Només a la sortida">
+<!ENTITY htmlInputOutput "Entrada i sortida">
